# KeybdSystem

./: .gitignore  CMakeLists.txt  KeybdPlugin.hpp  KeybdSystem.cpp  PluginFramework.cpp  PluginFramework.hpp  README.txt  READMEJP.txt  SimpleJP.cpp  SimpleJP.keybd  SimpleJP_res.rc  installer.iss  resource.h
EasyEn/: CMakeLists.txt  EasyEn.cpp  EasyEn_res.rc  resource.h
EasyEn/lang/: en_US.rc
EasyJP/: CMakeLists.txt  EasyJP.cpp  EasyJP_res.rc  resource.h
EasyJP/lang/: en_US.rc  ja_JP.rc
FullEn/: CMakeLists.txt  FullEn.cpp  FullEn_res.rc  resource.h
FullEn/lang/: en_US.rc
FullJP/: CMakeLists.txt  FullJP.cpp  FullJP_res.rc  resource.h
FullJP/lang/: en_US.rc  ja_JP.rc
KeybdSystem/: CMakeLists.txt  KeybdSystem.cpp  KeybdSystem_res.rc  MSmoothLayout.hpp  resource.h
KeybdSystem/lang/: en_US.rc  ja_JP.rc
SimpleJP/: CMakeLists.txt  SimpleJP.cpp  resource.h
SimpleJP/lang/: en_US.rc  ja_JP.rc
SimpleNumPad/: CMakeLists.txt  SimpleNumPad.cpp  SimpleNumPad_res.rc  resource.h
SimpleNumPad/lang/: en_US.rc  ja_JP.rc
StdEn/: CMakeLists.txt  StdEn.cpp  StdEn_res.rc  resource.h
StdEn/lang/: en_US.rc
StdJP/: CMakeLists.txt  StdJP.cpp  StdJP_res.rc  resource.h
StdJP/lang/: en_US.rc  ja_JP.rc
lang/: en_US.rc  ja_JP.rc
